fix interactions
